# reprime-backend

./: .env.example  .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  docker-compose.monitoring.yml  docker-compose.yml  start-monitoring.sh
config/: default.toml  development.toml  openfga-model.json  production.toml
migrations/: 001_create_users_table.sql  002_create_auth_tables.sql
monitoring/: README.md  loki.yml  mimir.yml  prometheus.yml  promtail.yml  tempo.yml
monitoring/grafana/dashboards/: logs-dashboard.json  metrics.json  overview-dashboard.json  reprime-backend.json
monitoring/grafana/provisioning/datasources/: prometheus.yml
src/: errors.rs  lib.rs  main.rs  metrics.rs  routes.rs  telemetry.rs
src/auth/: cache.rs  handlers.rs  jwt.rs  middleware.rs  mod.rs  models.rs  openfga.rs
src/client/: http_client.rs  middleware.rs  mod.rs
src/config/: mod.rs
src/database/: instrumentation.rs  mod.rs
src/handlers/: health.rs  metrics.rs  mod.rs  user.rs
src/middleware/: cors.rs  logging.rs  mod.rs  prometheus.rs  timeout.rs
src/models/: mod.rs
src/repositories/: auth.rs  mod.rs  user.rs
src/services/: auth.rs  mod.rs  user.rs
src/utils/: database.rs  logging.rs  mod.rs
tests/: auth_tests.rs  integration_tests.rs
