[package]
name = "reprime-backend"
version = "0.1.0"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/your-org/reprime-backend"
description = "A modern Rust backend application with clean architecture"
edition = "2021"
authors = ["Thanh Luan Vo <paulluanvothanh@gmail.com>"]

[dependencies]
anyhow = "1.0"
axum = "0.8.4"
chrono = { version = "0.4", features = ["serde"] }
config = "0.15.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "migrate"] }
tokio = { version = "1.0", features = ["full"] }
tower = { version = "0.5.2", features = ["timeout"] }
tower-http = { version = "0.6.6", features = ["compression-full", "cors", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
uuid = { version = "1.0", features = ["v4", "serde"] }

