[package]
name = "reprime-backend"
version = "0.1.0"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/luanvothanh12/reprime-backend"
description = "Reprime Backend"
edition = "2021"
authors = ["Thanh Luan Vo <paulluanvothanh@gmail.com>"]

[dependencies]
anyhow = "1.0"
axum = "0.8.4"
axum-prometheus = "0.8.0"
chrono = { version = "0.4", features = ["serde"] }
config = "0.15.11"
futures = "0.3.31"
prometheus = "0.14.0"
reqwest = { version = "0.12.20", features = ["json", "stream"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "migrate"] }
tokio = { version = "1.0", features = ["full"] }
tower = { version = "0.5.2", features = ["retry", "timeout", "util"] }
tower-http = { version = "0.6.6", features = ["compression-full", "cors", "trace", "fs", "timeout"] }
tracing = "0.1"
tracing-loki = "0.2.6"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
utoipa = { version = "5.4.0", features = ["axum_extras", "chrono", "uuid"] }
utoipa-swagger-ui = { version = "9.0.2", features = ["axum"] }
uuid = { version = "1.0", features = ["v4", "serde"] }

